--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                             <div class="card1__thumb"> <!--intégration de l'imag en thumb et différent si cliqué /intégrer dans un div pour contenir l'image-->
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
+
+                            <div class="star">
                             <h3>Auberge de la Cannebière </h3> <!--Titre de l'article en H3 pour le SEO-->
                             <p >Nuit à partir de <strong>25€</strong></p>  <!--Paragraphe avec intégration de la balise em (ou autre de moindre importance) pour la mise en gras-->
                             <div class="card__stars"> <!--Intégration des étoiles block parent pour uiliser le display inline-flex il s'agit d'une option code car sans retour serveur-->
@@ -97,6 +99,7 @@
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star"></i><!--etoile grise-->
                             </div>
+                        </div>
                         </a>
                     </article>
                     <article class="card1">
@@ -104,6 +107,7 @@
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" title="Cliquez pour agrandir" />
                             </div>
+                            <div class="star">
                             <h3>Hôtel du port</h3>
                             <p >Nuit à partir de 52<strong>€</strong></p>  
                             <div class="card__stars"> 
@@ -113,6 +117,7 @@
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star blue"></i>
                             </div>
+                        </div>
                         </a>
                     </article>
                     <article class="card1">
@@ -120,6 +125,7 @@
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" title="Cliquez pour agrandir" />
                             </div>
+                            <div class="star">
                             <h3>Hôtel Les mouettes</h3>
                             <p >Nuit à partir de 76<strong>€</strong></p>  
                             <div class="card__stars"> 
@@ -129,6 +135,7 @@
                                 <i class="fas fa-star blue"></i>
                                 <i class="fas fa-star"></i>
                             </div>
+                        </div>
                         </a>
                     </article>
                     <article class="card1">
@@ -136,14 +143,16 @@
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" title="Cliquez pour agrandir" />
                             </div>
-                            <h3>Hôtel de la mer</h3>
-                            <p >Nuit à partir de 46<strong>€</strong></p>  
-                            <div class="card__stars">
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                            <div class="star">
+                                <h3>Hôtel de la mer</h3>
+                                <p >Nuit à partir de 46<strong>€</strong></p>  
+                                <div class="card__stars">
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </a>
                     </article>
@@ -152,14 +161,16 @@
                             <div class="card1__thumb">
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" title="Cliquez pour agrandir" />
                             </div>
-                            <h3>Auberge Le Panier</h3> 
-                            <p >Nuit à partir de <strong>23€</strong></p>  
-                            <div class="card__stars"> 
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star"></i>
+                            <div class="star">
+                                <h3>Auberge Le Panier</h3> 
+                                <p >Nuit à partir de <strong>23€</strong></p>  
+                                <div class="card__stars"> 
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </a>
                     </article>
@@ -168,14 +179,16 @@
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" title="Cliquez pour agrandir" />
                             </div>
-                            <h3>Hôtel chez Amina</h3> 
-                            <p >Nuit à partir de 96<strong>€</strong></p> 
-                            <div class="card__stars"> 
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
-                                <i class="fas fa-star blue"></i>
+                            <div class="star">
+                                <h3>Hôtel chez Amina</h3> 
+                                <p >Nuit à partir de 96<strong>€</strong></p> 
+                                <div class="card__stars"> 
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                    <i class="fas fa-star blue"></i>
+                                </div>
                             </div>
                         </a>
                     </article>
@@ -193,7 +206,7 @@
                     <a href="#">
                         <article class="card2">
                                 <img class="card2__thumb__img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" title="Cliquez pour agrandir" />
-                                <div>
+                                <div class="star">
                                     <h3>Hôtel le soleil du matin</h3>
                                     <p >Nuit à partir de 128<strong>€</strong></p> 
                                     <div class="card__stars"> 
@@ -210,7 +223,7 @@
                     <a href="#">
                         <article class="card2">
                             <img class="card2__thumb__img"  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambre d'hôtes" title="Cliquez pour agrandir" />
-                            <div>
+                            <div class="star">
                                 <h3>Au coeur de l'eau Chambre d'hôtes</h3>
                                 <p >Nuit à partir de 71<strong>€</strong></p>
                                 <div class="card__stars"> 
@@ -226,7 +239,7 @@
                     <a href="#">
                         <article class="card2">
                             <img class="card2__thumb__img"  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel-Tout-bleu-et-Blanc" title="Cliquez pour agrandir" />
-                            <div>
+                            <div class="star">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p >Nuit à partir de 68<strong>€</strong></p> 
                                 <div class="card__stars">
