--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h2 id=hebergement>Hébergement à Marseille</h2>
                 <div class="hosting_art">
                     <article class="card1" >
-                        <a href="#"><!--Definition de la carte parent de la section hénergement-->
+                        <a class="ajust" href="#"><!--Definition de la carte parent de la section hénergement-->
                             <div class="card1__thumb"> <!--intégration de l'imag en thumb et différent si cliqué /intégrer dans un div pour contenir l'image-->
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />
                             </div>
@@ -103,7 +103,7 @@
                         </a>
                     </article>
                     <article class="card1">
-                        <a href="#">
+                        <a class="ajust" href="#">
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" title="Cliquez pour agrandir" />
                             </div>
@@ -121,7 +121,7 @@
                         </a>
                     </article>
                     <article class="card1">
-                        <a href="#">
+                        <a class="ajust" href="#">
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" title="Cliquez pour agrandir" />
                             </div>
@@ -139,7 +139,7 @@
                         </a>
                     </article>
                     <article class="card1">
-                        <a href="#">
+                        <a class="ajust" href="#">
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" title="Cliquez pour agrandir" />
                             </div>
@@ -157,7 +157,7 @@
                         </a>
                     </article>
                     <article class="card1">
-                        <a href="#">
+                        <a class="ajust" href="#">
                             <div class="card1__thumb">
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" title="Cliquez pour agrandir" />
                             </div>
@@ -175,7 +175,7 @@
                         </a>
                     </article>
                     <article class="card1">
-                        <a href="#">                        
+                        <a class="ajust" href="#">                        
                             <div class="card1__thumb"> 
                                 <img class="card1__thumb__img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" title="Cliquez pour agrandir" />
                             </div>
