--- a/index.html
+++ b/index.html
@@ -260,39 +260,39 @@
             <div class="activity__article">       
                
                     <div class="card3"> 
-                        <a href="#">                         
-                            <img class="imXL" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                                         
+                        <a class="act" href="#">                         
+                            <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                                         
                             <h3>Vieux port</h3>
                         </a>
                     </div>
                 
                <div class="card3">  
-                   <a href="#" >            
-                        <img class="imL" src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash2.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />               
+                   <a class="act" href="#" >            
+                        <img class="imL" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />               
                         <h3>Fort de Pomègues</h3>   
                     </a>              
                 </div>
                 <div class="card3"> 
-                    <a  href="#">               
-                        <img class="imS"  src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />              
+                    <a class="act" href="#">               
+                        <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />              
                         <h3>Îles du frioul</h3> 
                     </a>               
                 </div>
                 <div class="card3">
-                    <a href="#">                    
-                        <img class="imXL" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" /> 
+                    <a class="act" href="#">                    
+                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" /> 
                         <h3>Parc National des Calanques</h3>
                     </a>
                     </div>
                 <div class="card3"> 
-                    <a href="#">                              
-                        <img class="imXS" src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                
+                    <a class="act" href="#">                              
+                        <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                
                         <h3>Notre-Dame-de-la-Garde</h3> 
                     </a>                     
                 </div>             
                 <div class="card3">
-                    <a href="#"> 
-                        <img class="imS" src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                
+                    <a class="act" href="#"> 
+                        <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="Auberge de la Cannebière" title="Cliquez pour agrandir" />                
                         <h3>Parc Longchamp</h3>
                     </a>                  
                 </div>
