--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
                 <div ><a href="#" title="S'inscrire" id="log">S'inscrire</a>         </div>        
             </nav>
         </header>
-        <section class="recherche">
+        <div class="titre">
             <h1 class="recherche__titre">Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p class=titre1>En plein centre ville ou en pleine nature</p>
+            <p class=titre1>En plein centre ville ou en pleine nature</p>
+
+        </div>
+            
+       <nav class="recherche">
             <form action="index.html">
                 <div class="recherche__location">
                     <i class="fas fa-map-marker-alt"></i>
@@ -72,13 +76,14 @@
                     </div>
                 </div>
              </div>
-            <div class="information">
-                <div class="information__fa">
-                    <i class="fas fa-info"></i>
-                </div>
-                <p >Plus de 500 logements sont disponibles dans cette ville</p> <!-- le 500 viens pobablement du site -->
+        </nav>
+        <div class="information">
+            <div class="information__fa">
+                <i class="fas fa-info"></i>
             </div>
-        </section>
+            <p >Plus de 500 logements sont disponibles dans cette ville</p> <!-- le 500 viens pobablement du site -->
+        </div>
+        
         <section class="global_hebergement">  
             <div class="hebergement"> 
                 <h2 id=hebergement>Hébergement à Marseille</h2>
