--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
             <div class="trend"> <!--<i class="fas fa-chart-line"></i>-->
                 <div class="trend__title">
-                    <h2 id=activite>Les plus populaires</h2>
+                    <h2 >Les plus populaires</h2>
                     <div class="trend_fa">
                         <i class="fas fa-chart-line"></i>
                     </div>
@@ -261,7 +261,7 @@
             </div>
         </section>
         <section class="activity"> <!-- aside? ne représente pas vraiment la mission du site-->
-            <h2>Activités à Marseille</h2>  
+            <h2 id=activite>Activités à Marseille</h2>  
             <div class="activity__article">       
                
                     <div class="card3"> 
